chore(groups/dialog): submit new group on enter
related to CAM-2739

--- a/client/client/scripts/task/modals/cam-tasklist-groups-modal.html
+++ b/client/client/scripts/task/modals/cam-tasklist-groups-modal.html
@@ -39,6 +39,7 @@
                        ng-change="validateNewGroup()"
                        name="newGroup"
                        placeholder="{{ 'GROUP_ADD' | translate }}"
+                       ng-keyup="($event.keyCode == 13 && isValid() && addGroup())"
                        required>
 
                 <span class="input-group-btn">
