--- a/client/client/scripts/form/directives/cam-tasklist-form-external.html
+++ b/client/client/scripts/form/directives/cam-tasklist-form-external.html
@@ -1,4 +1,9 @@
-<div class="alert alert-warning" role="alert">
+<div class="text-help">
   <i class="glyphicon glyphicon-info-sign"></i>
-  {{ 'EXTERNAL_FORM_NOT_SUPPORTED' | translate }}
+  {{ EXTERNAL_FORM_NOTE | translate }}
 </div>
+
+<a ng-href="{{ externalFormUrl  }}">
+  {{ 'EXTERNAL_FORM_LINK' |translate }}
+  <i class="glyphicon glyphicon-folder-open"></i>
+</a>
