--- a/client/client/scripts/task/plugins/detail/cam-tasklist-task-detail-form-plugin.html
+++ b/client/client/scripts/task/plugins/detail/cam-tasklist-task-detail-form-plugin.html
@@ -10,7 +10,8 @@
        cam-tasklist-form
        tasklist-form="taskForm"
        on-form-completion-callback="completionCallback"
-       options="options" >
+       options="options"
+       params="params" >
   </div>
 
 </div>
