--- a/client/client/scripts/navigation/directives/cam-sorting-choices.html
+++ b/client/client/scripts/navigation/directives/cam-sorting-choices.html
@@ -1,4 +1,4 @@
-<div class="dropdown pull-right">
+<div class="dropdown">
   <a href
      tabindex="-1"
      role="button"
@@ -16,7 +16,7 @@
      ng-class="{'glyphicon-chevron-up': order === 'asc', 'glyphicon-chevron-down': order === 'desc'}"
      ng-click="changeOrder()"></a>
 
-  <ul class="dropdown-menu dropdown-menu-right"
+  <ul class="dropdown-menu"
       role="menu">
     <li ng-show="by !== 'priority'">
       <a href
