refactor(filter): untangle dependencies of filter and tasklistquery
feat(filter): offer option to automatically update tasklist
feat(links): store query in url to allow deeplinking

related to CAM-2738

--- a/client/client/scripts/filter/directives/cam-tasklist-tasks.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-tasks.html
@@ -10,6 +10,12 @@
     <i class="glyphicon glyphicon-info-sign"></i>
     {{ 'NO_MATCHING_TASK' | translate }}
   </div>
+  <div ng-show="totalItems && !tasks" >
+    <span>
+    {{ 'RESTRICTION_NOTICE' | translate }}
+    <a ng-click="resetPage()">{{ 'RESET_PAGE' | translate }}</a>
+    </span>
+  </div>
 
   <div ng-show="totalItems">
     <ol class="tasks-list list-unstyled">
