--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -28,7 +28,8 @@
       <div class="row">
         <div class="col-xs-8">
           <div cam-task-search
-               tasklist-data="tasklistData"></div>
+               tasklist-data="tasklistData"
+               tasklist-app="tasklistApp"></div>
         </div>
         <div class="col-xs-4">
           <div cam-sorting-choices
